# KeyValueStore

./: CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  Coverage.cmake  Documentation.cmake  Examples.cmake  Installation.cmake  Options.cmake  Targets.cmake  Testing.cmake  keyvaluestore-config.cmake.in
coverage/: coverage.info  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/keyvaluestore/: KeyValueStore.hpp.func-sort-c.html  KeyValueStore.hpp.func.html  KeyValueStore.hpp.gcov.html  MemoryKeyValueStore.hpp.func-sort-c.html  MemoryKeyValueStore.hpp.func.html  MemoryKeyValueStore.hpp.gcov.html  index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/sqlite/: SQLiteKeyValueStore.cpp.func-sort-c.html  SQLiteKeyValueStore.cpp.func.html  SQLiteKeyValueStore.cpp.gcov.html  index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/include/keyvaluestore/: KeyValueStore.hpp.func-sort-c.html  KeyValueStore.hpp.func.html  KeyValueStore.hpp.gcov.html  MemoryKeyValueStore.hpp.func-sort-c.html  MemoryKeyValueStore.hpp.func.html  MemoryKeyValueStore.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/src/sqlite/: SQLiteKeyValueStore.cpp.func-sort-c.html  SQLiteKeyValueStore.cpp.func.html  SQLiteKeyValueStore.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: KeyValueStore_8cpp.html  KeyValueStore_8cpp__incl.map  KeyValueStore_8cpp__incl.md5  KeyValueStore_8hpp.html  KeyValueStore_8hpp.js  KeyValueStore_8hpp__dep__incl.map  KeyValueStore_8hpp__dep__incl.md5  KeyValueStore_8hpp__incl.map  KeyValueStore_8hpp__incl.md5  KeyValueStore_8hpp_source.html  MemoryKeyValueStore_8cpp.html  MemoryKeyValueStore_8cpp__incl.map  MemoryKeyValueStore_8cpp__incl.md5  MemoryKeyValueStore_8hpp.html  MemoryKeyValueStore_8hpp.js  MemoryKeyValueStore_8hpp__dep__incl.map  MemoryKeyValueStore_8hpp__dep__incl.md5  MemoryKeyValueStore_8hpp__incl.map  MemoryKeyValueStore_8hpp__incl.md5  MemoryKeyValueStore_8hpp_source.html  README_8md.html  SQLiteKeyValueStore_8cpp.html  SQLiteKeyValueStore_8cpp__incl.map  SQLiteKeyValueStore_8cpp__incl.md5  SQLiteKeyValueStore_8hpp.html  SQLiteKeyValueStore_8hpp.js  SQLiteKeyValueStore_8hpp__dep__incl.map  SQLiteKeyValueStore_8hpp__dep__incl.md5  SQLiteKeyValueStore_8hpp__incl.map  SQLiteKeyValueStore_8hpp__incl.md5  SQLiteKeyValueStore_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classkeyvaluestore_1_1KeyValueStore-members.html  classkeyvaluestore_1_1KeyValueStore.html  classkeyvaluestore_1_1KeyValueStore.js  classkeyvaluestore_1_1KeyValueStoreError-members.html  classkeyvaluestore_1_1KeyValueStoreError.html  classkeyvaluestore_1_1KeyValueStoreError.js  (+91 more)
docs/html/: KeyValueStore_8hpp.html  KeyValueStore_8hpp__incl.map  KeyValueStore_8hpp_source.html  MemoryKeyValueStore_8hpp.html  MemoryKeyValueStore_8hpp__incl.map  MemoryKeyValueStore_8hpp__incl.md5  MemoryKeyValueStore_8hpp_source.html  README_8md.html  SQLiteKeyValueStore_8hpp__incl.map  SQLiteKeyValueStore_8hpp_source.html  annotated.html  classes.html  classkeyvaluestore_1_1KeyValueStoreError-members.html  classkeyvaluestore_1_1KeyValueStoreError.html  classkeyvaluestore_1_1KeyValueStoreError__coll__graph.map  classkeyvaluestore_1_1KeyValueStoreError__coll__graph.md5  classkeyvaluestore_1_1KeyValueStore__inherit__graph.map  classkeyvaluestore_1_1KeyValueStore__inherit__graph.md5  classkeyvaluestore_1_1MemoryKeyValueStore.html  classkeyvaluestore_1_1SQLiteKeyValueStore__coll__graph.md5  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  namespacekeyvaluestore.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  structkeyvaluestore_1_1MemoryKeyValueStore_1_1KeyHash-members.html
docs/html/search/: all_0.js  all_5.js  all_8.js  classes_1.js  files_1.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
docs/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_5.js  functions_8.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_2.js
examples/memory_example/: main.cpp
examples/sqlite_example/: main.cpp
include/keyvaluestore/: KeyValueStore.hpp  MemoryKeyValueStore.hpp  SQLiteKeyValueStore.hpp
src/memory/: MemoryKeyValueStore.cpp
src/sqlite/: SQLiteKeyValueStore.cpp
tests/: interface_test.cpp  memory_test.cpp  sqlite_test.cpp
